Changed alignment, fixed spelling

--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,6 @@ section p {
     margin-right: auto;
     width: 50%;
   }
+  figcaption {
+    text-align: center;
+  }
